tests/baselines/reference/parserMemberFunctionDeclaration2.errors.txt
==== tests/cases/compiler/parserMemberFunctionDeclaration2.ts (1 errors) ====
    class C {
        static static Foo() { }
               ~~~~~~
!!! parserMemberFunctionDeclaration2.ts(2,12): error TS1030: 'static' modifier already seen.
    }